WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192780
Don't use more expensive layer backing store formats when subpixel text antialiasing is not enabled
https://bugs.webkit.org/show_bug.cgi?id=192780
Summary
Don't use more expensive layer backing store formats when subpixel text antia...
Simon Fraser (smfr)
Reported
2018-12-17 15:31:39 PST
Don't use more expensive layer backing store formats when subpixel text antialiasing is not enabled
Attachments
Patch
(26.95 KB, patch)
2018-12-17 15:35 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-12-17 15:35:51 PST
Created
attachment 357485
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-12-17 15:35:53 PST
<
rdar://problem/43394387
>
EWS Watchlist
Comment 3
2018-12-17 15:38:55 PST
Attachment 357485
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/graphics/cocoa/FontCascadeCocoa.mm:66: Misplaced OS version check. Please use a named macro in wtf/Platform.h or wtf/FeatureDefines.h. [build/version_check] [5] ERROR: Source/WebCore/PAL/pal/spi/cg/CoreGraphicsSPI.h:289: Misplaced OS version check. Please use a named macro in wtf/Platform.h or wtf/FeatureDefines.h. [build/version_check] [5] Total errors found: 2 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 4
2018-12-17 17:51:34 PST
https://trac.webkit.org/changeset/239306/webkit
Truitt Savell
Comment 5
2018-12-18 08:39:14 PST
Looks like this revision
https://trac.webkit.org/changeset/239306/webkit
has caused compositing/contents-format/subpixel-antialiased-text-enabled.html to fail constantly on Mojave wk1. I was able to reproduce with: run-webkit-tests --root testbuild-239306 compositing/contents-format/subpixel-antialiased-text-enabled.html --iterations 50 -f -1 the test fails constantly on
r239306
but passes when ran on 239305. Diff: --- /Volumes/Data/slave/mojave-debug-tests-wk1/build/layout-test-results/compositing/contents-format/subpixel-antialiased-text-enabled-expected.txt +++ /Volumes/Data/slave/mojave-debug-tests-wk1/build/layout-test-results/compositing/contents-format/subpixel-antialiased-text-enabled-actual.txt @@ -8,10 +8,6 @@ (GraphicsLayer (bounds 5018.00 2018.00) (contentsOpaque 1) - (tile cache coverage 0, 0 1024 x 1024) - (tile size 512 x 512) - (top left tile 0, 0 tiles grid 2 x 2) - (in window 1) (children 3 (GraphicsLayer (position 18.00 10.00)
Simon Fraser (smfr)
Comment 6
2018-12-18 08:42:55 PST
Why was EWS green? I'll fix, please don't roll out.
Truitt Savell
Comment 7
2018-12-18 08:46:57 PST
EWS was green because the failure only effected Mojave. History:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=compositing%2Fcontents-format%2Fsubpixel-antialiased-text-enabled.html
Simon Fraser (smfr)
Comment 8
2018-12-18 09:10:42 PST
We need more EWS
Simon Fraser (smfr)
Comment 9
2018-12-18 09:12:09 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... A LayoutTests/platform/mac-mojave-wk1/compositing/contents-format/subpixel-antialiased-text-enabled-expected.txt M LayoutTests/ChangeLog Committed
r239338
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug